propbankbr: training version 1.0 running

--- a/lr5.00e-03_hs8x8x8_ctx-p1/valid-eval.props
+++ b/lr5.00e-03_hs8x8x8_ctx-p1/valid-eval.props
@@ -15,27 +15,27 @@ desconhecer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
--	(AM-PNC*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -50,8 +50,8 @@ desconhecer	(V*)
 -	*
 -	(A0*
 -	*)
--	(AM-TMP*
--	*)
+-	*
+-	*
 apontar	(V*)
 -	(A1*
 -	*
@@ -130,14 +130,14 @@ passar	(V*)
 -	*
 
 -	*
--	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
--	(AM-REC*)
+-	*
+-	*
+-	*
 realizar	(V*)
 -	*
 -	*
@@ -151,14 +151,14 @@ realizar	(V*)
 -	*
 
 -	*
--	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 trazer	(V*)
@@ -176,23 +176,23 @@ trazer	(V*)
 -	*
 -	*
 -	*
--	(A0*
+-	*
+-	*
+-	*
+-	(A1*)
+vir	(V*)
+-	(A2*
+-	*
 -	*
 -	*
 -	*)
-vir	(V*)
--	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -227,10 +227,10 @@ suspeitar	(V*)
 -	*
 -	*
 -	(A1*
--	*)
 -	*
-morrer	(V*)
--	(C-V*)
+-	*
+morrer	*)
+-	(V*)
 -	*
 
 -	(A1*)
@@ -404,11 +404,11 @@ ter	(V*)
 -	*
 -	*
 
--	*
--	*
--	*
--	*
 -	(A1*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -424,8 +424,8 @@ explicar	(V*)
 -	*
 -	*
 -	*
-fixar	(A3*
--	*
+fixar	(V*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -473,12 +473,12 @@ evitar	(V*)
 -	*
 -	*
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 ter	(V*)
@@ -490,7 +490,7 @@ ter	(V*)
 -	*
 
 -	*
--	(A2*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -508,8 +508,8 @@ reajustar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -537,7 +537,7 @@ dizer	(V*)
 
 -	*
 beneficiar	(V*)
--	(AM-ADV*
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -583,16 +583,16 @@ demorar	(V*)
 -	*
 -	*
 -	*
--	(V*)
-receber	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
+receber	(V*)
+-	(A1*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -604,7 +604,7 @@ ganhar	(V*)
 -	(A1*)
 -	*
 
--	(A0*)
+-	*
 -	*
 ter	(V*)
 -	(A1*
@@ -638,7 +638,6 @@ ter	(V*)
 -	*
 -	*
 
--	(A1*
 -	*
 -	*
 -	*
@@ -647,21 +646,10 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	(A0*)
 dizer	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -670,6 +658,18 @@ dizer	(V*)
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -691,13 +691,13 @@ atribuir	(V*)
 -	*
 -	*
 -	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	*
 -	*
 
 -	*
@@ -785,7 +785,7 @@ precisar	(V*)
 -	*
 -	(A0*)
 ir	(V*)
--	(A2*
+-	(A1*
 -	*)
 
 -	(A0*
@@ -797,9 +797,9 @@ ir	(V*)
 -	*
 -	*)
 fazer	(V*)
--	(A1*
--	*)
--	(AM-PRD*
+-	(C-V*)
+-	(A1*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -831,12 +831,13 @@ atacar	(V*)
 -	(A1*)
 -	(AM-TMP*)
 -	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*)
 -	*
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -852,24 +853,23 @@ atacar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	(A0*)
 -	*
--	*
+-	(AM-NEG*)
 ter	(V*)
 -	(A1*
 -	*
+-	*)
 -	*
 -	*
--	*
--	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -888,9 +888,9 @@ ter	(V*)
 -	*)
 -	*
 
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -901,8 +901,8 @@ ter	(V*)
 -	*
 -	*
 ficar	(V*)
--	(A2*
--	*
+-	(A2*)
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -1001,11 +1001,11 @@ afetar	(V*)
 -	*
 -	*
 -	*
--	(A0*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 fazer	(V*)
 -	(A1*
@@ -1096,9 +1096,9 @@ acusar	(V*)
 -	*)
 -	*
 comparecer	(V*)
--	(AM-TMP*)
--	(A1*
--	*
+-	(AM-TMP*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1139,27 +1139,27 @@ condenar	(V*)
 -	(A1*)
 -	*
 punir	(V*)
--	(A2*
 -	*
 -	*
 -	*
 -	*
+-	(AM-CAU*
 -	*
 -	*
 -	*
 -	*)
 -	*
 
--	(A0*
--	*
--	*
--	*
+-	(A1*
 -	*
 -	*)
 -	*
 -	*
+-	*
+-	*
+-	*
 cumprir	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*)
 -	*
@@ -1212,8 +1212,8 @@ ficar	(V*)
 -	*)
 -	*
 
--	(A1*
--	*)
+-	(A0*)
+-	*
 começar	(V*)
 -	(AM-TMP*
 -	*
@@ -1245,7 +1245,7 @@ dar	(V*)
 -	*
 -	*
 atender	(V*)
--	(A1*)
+-	(A0*)
 -	*
 
 -	(A1*
@@ -1293,20 +1293,20 @@ faltar	(V*)
 -	*
 -	*
 viver	(V*)
+-	(C-V*)
 -	(A1*
 -	*
 -	*
 -	*
 -	*
+-	*)
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1317,7 +1317,8 @@ viver	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(AM-CAU*
+-	*
 -	*
 -	*
 -	*
@@ -1337,7 +1338,6 @@ viver	(V*)
 -	*
 -	*
 -	*)
--	(AM-DIS*)
 -	*
 dizer	(V*)
 -	*
@@ -1353,7 +1353,6 @@ dizer	(V*)
 -	*
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
@@ -1373,7 +1372,8 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1390,7 +1390,7 @@ faltar	(V*)
 -	*
 
 -	(A0*)
--	(AM-ADV*)
+-	(AM-NEG*)
 ter	(V*)
 -	(A1*
 -	*
@@ -1400,13 +1400,13 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -1422,11 +1422,11 @@ renovar	(V*)
 -	*
 -	*)
 -	*
--	(AM-MNR*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -1472,9 +1472,9 @@ afirmar	(V*)
 -	*
 
 saber	(V*)
--	(A1*
+-	(A1*)
 -	*
--	*)
+-	*
 
 -	*
 -	(AM-TMP*
@@ -1512,19 +1512,19 @@ começar	(V*)
 -	*
 -	*
 
--	(AM-DIS*
--	*)
 -	*
--	(AM-TMP*)
+-	*
+-	*
+-	*
 ganhar	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1537,10 +1537,9 @@ ganhar	(V*)
 -	*
 -	*
 
--	(AM-LOC*
+-	(AM-TMP*
 -	*)
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1550,7 +1549,8 @@ ganhar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	(A0*)
 disputar	(V*)
 -	(A1*
@@ -1582,16 +1582,16 @@ disputar	(V*)
 -	*
 -	*
 terminar	(V*)
--	(A1*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
 
 -	*
 multar	(V*)
--	(A1*
--	*)
--	(AM-LOC*
+-	(A0*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1646,10 +1646,10 @@ descumprir	(V*)
 -	*
 -	*
 -	*
--	(A0*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 chegar	(V*)
 -	(A2*
@@ -1670,12 +1670,12 @@ chegar	(V*)
 -	*
 aplicar	(V*)
 -	(A1*
--	*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1685,8 +1685,8 @@ aplicar	(V*)
 
 -	(A1*)
 produzir	(V*)
--	(A2*
--	*
+-	(A2*)
+-	(AM-LOC*
 -	*
 -	*)
 
@@ -1700,32 +1700,32 @@ instalar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A1*
@@ -1760,8 +1760,8 @@ fazer	(V*)
 -	(A0*)
 aconselhar	(V*)
 -	(A1*
--	*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -1776,10 +1776,10 @@ aconselhar	(V*)
 -	(A0*
 -	*
 -	*)
--	(AM-ADV*)
--	(V*)
-conversar	(A1*
+-	(AM-TMP*
 -	*
+conversar	*)
+-	(A1*
 -	*
 -	*)
 -	*
@@ -1816,15 +1816,15 @@ reverter	(V*)
 -	*
 -	*
 -	*
--	(A0*
--	*)
-perder	(V*)
--	(C-V*)
--	(A1*)
-
--	(A1*
 -	*
--	*)
+-	*
+perder	(V*)
+-	*
+-	*
+
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1857,12 +1857,12 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	(AM-TMP*)
+-	*
 -	*
 criticar	(V*)
 -	*
 
--	(AM-TMP*)
+-	(AM-DIS*)
 -	*
 -	(A0*
 -	*)
@@ -1870,7 +1870,7 @@ criticar	(V*)
 cumprir	(V*)
 -	(A1*
 -	*)
--	(AM-MNR*
+-	(AM-EXT*
 -	*
 -	*
 -	*
@@ -1886,12 +1886,12 @@ cumprir	(V*)
 -	*
 -	(A0*)
 preferir	(V*)
--	(A1*
+-	(C-V*
 -	*
 -	*)
 -	*
 
--	(A2*
+-	(AM-DIS*
 -	*
 -	*)
 -	*
@@ -1921,7 +1921,7 @@ ter	(V*)
 -	*
 -	*
 dizer	(V*)
--	(A1*
+-	(AM-TMP*
 -	*)
 -	*
 -	*
@@ -1929,16 +1929,15 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	(A1*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	(A1*)
 querer	(V*)
 -	*
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
@@ -1961,7 +1960,8 @@ querer	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 simpatizar	(V*)
 -	(A2*
 -	*
@@ -1973,23 +1973,23 @@ simpatizar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -2068,20 +2068,20 @@ narrar	(V*)
 haver	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -2109,8 +2109,8 @@ ocorrer	(V*)
 -	*
 -	(A1*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2126,7 +2126,7 @@ ocorrer	(V*)
 -	(A1*)
 -	*
 colocar	(V*)
--	(A2*
+-	(A4*
 -	*
 -	*
 -	*
@@ -2137,16 +2137,16 @@ colocar	(V*)
 
 -	(AM-ADV*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	(A0*
--	*
--	*
--	*
--	*)
--	(AM-NEG*)
 chegar	(V*)
--	(A1*
+-	(AM-LOC*
 -	*
 -	*)
 -	*
@@ -2165,8 +2165,8 @@ chegar	(V*)
 -	*
 -	*)
 dar	(V*)
--	(A1*
--	*
+-	(A1*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -2256,8 +2256,8 @@ expulsar	(V*)
 -	*
 -	*
 -	*
--	(V*)
-adotar	(C-V*)
+-	*
+adotar	(V*)
 -	(A1*
 -	*
 -	*)
@@ -2282,7 +2282,7 @@ dar	(V*)
 -	*
 forçar	(V*)
 -	*
--	(AM-MNR*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2302,16 +2302,16 @@ forçar	(V*)
 -	*
 reduzir	(V*)
 -	(A1*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*)
 -	*
 
 -	(A1*
 -	*
+-	*
 -	*)
--	(A0*)
 -	*
 -	*
 dizer	(V*)
@@ -2353,15 +2353,15 @@ estar	(V*)
 -	*
 -	*
 
--	(AM-DIS*)
--	*
--	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2386,9 +2386,9 @@ ir	(V*)
 -	*
 -	*
 
--	(A1*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2427,11 +2427,11 @@ vetar	(V*)
 -	*
 -	*)
 estar	(V*)
--	(A1*
+-	(AM-LOC*
 -	*
+-	*)
 -	*
--	*
--	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2469,8 +2469,8 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*)
 -	*
+-	*)
 investir	(V*)
 -	(A1*
 -	*
@@ -2485,8 +2485,8 @@ firmar	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2521,7 +2521,7 @@ firmar	(V*)
 -	*
 -	(A1*)
 valer	(V*)
--	(A4*
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -2539,8 +2539,8 @@ crescer	(V*)
 -	(A2*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -2560,7 +2560,7 @@ crescer	(V*)
 -	*
 -	*)
 -	*
--	(A1*
+-	(A0*
 -	*)
 -	*
 -	*
@@ -2573,8 +2573,8 @@ elevar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2589,9 +2589,9 @@ elevar	(V*)
 -	*
 -	*
 -	*
--	*
-divulgar	*
 -	*)
+divulgar	(V*)
+-	(AM-TMP*)
 -	(A1*
 -	*
 -	*
@@ -2601,13 +2601,13 @@ divulgar	*
 -	*
 -	*
 -	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
--	*
--	*
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -2624,12 +2624,12 @@ divulgar	*
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2747,7 +2747,7 @@ estar	(V*)
 -	*)
 -	*
 escolher	(V*)
--	(A4*
+-	(AM-MNR*)
 -	*
 -	*
 -	*
@@ -2759,7 +2759,7 @@ escolher	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 
 -	*
@@ -2778,7 +2778,7 @@ escolher	(V*)
 -	*
 -	*
 estar	(V*)
--	(A1*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -2812,7 +2812,7 @@ estar	(V*)
 -	*
 -	*
 -	(AM-TMP*)
--	(A0*
+-	(A1*
 -	*)
 treinar	(V*)
 -	(AM-TMP*
@@ -2894,10 +2894,10 @@ trabalhar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
 -	(A0*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -2952,7 +2952,7 @@ vir	(V*)
 -	*
 -	*
 -	*
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*
 -	*)
@@ -3004,9 +3004,9 @@ haver	(V*)
 -	*
 -	*
 substituir	(V*)
--	(A0*)
+-	(A0*
 -	*
--	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -3034,42 +3034,42 @@ substituir	(V*)
 -	*
 -	*
 ter	(V*)
--	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	*
-
--	(AM-DIS*
--	*)
--	*
--	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
--	*)
--	(AM-NEG*)
--	*
--	*
-jogar	(V*)
 -	(A2*
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*)
+-	*
+
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	(AM-NEG*)
+-	*
+-	*
+jogar	(V*)
+-	(AM-TMP*
+-	*
+-	*
+-	*
 -	*)
 -	*
 -	*
 
--	(AM-DIS*
+-	(AM-TMP*
 -	*)
 -	*
 -	(A0*)
@@ -3105,8 +3105,8 @@ ampliar	(V*)
 -	(A1*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3186,8 +3186,8 @@ iniciar	(V*)
 inspirar	(V*)
 -	(AM-LOC*
 -	*
--	*)
--	(A1*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3254,7 +3254,7 @@ ficar	(V*)
 -	*)
 -	*
 dizer	(V*)
--	(A2*
+-	(A0*
 -	*
 -	*
 -	*
@@ -3270,7 +3270,6 @@ afirmar	(V*)
 -	*
 -	(AM-DIS*)
 -	*
--	(A1*
 -	*
 -	*
 -	*
@@ -3281,20 +3280,21 @@ afirmar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	(A0*)
 -	*
 achar	(V*)
--	(A1*)
+-	(C-V*)
 -	(AM-LOC*
 -	*
 -	*)
 
 -	(A0*)
 encontrar	(V*)
--	(A1*
+-	(A0*
 -	*
 -	*
 -	*
@@ -3323,8 +3323,8 @@ encontrar	(V*)
 dizer	(V*)
 -	(A1*
 -	*
--	*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3393,7 +3393,7 @@ receber	(V*)
 -	*)
 -	*
 receber	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3423,16 +3423,16 @@ morrer	(V*)
 -	*)
 -	*
 
--	(A1*
+-	(A0*
 -	*)
 -	*
 realizar	(V*)
+-	(A0*
+-	*
+-	*
+-	*)
+-	*
 -	(AM-LOC*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -3443,15 +3443,15 @@ realizar	(V*)
 -	*)
 -	*
 
--	(A0*)
-bater	(V*)
--	(A1*)
 -	*
--	(A3*
+bater	*
+-	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
 
 -	*
 -	*
@@ -3515,8 +3515,8 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -3543,7 +3543,6 @@ ficar	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
@@ -3555,7 +3554,8 @@ ficar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 derrotar	(V*)
 -	(AM-TMP*)
 -	(V*)
@@ -3603,10 +3603,10 @@ marcar	(V*)
 -	*
 -	*
 -	*)
--	(A0*)
--	*
+-	(A0*
+-	*)
 participar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3621,7 +3621,7 @@ participar	(V*)
 -	*)
 -	*
 
--	(A2*
+-	(AM-DIS*
 -	*
 -	*
 -	*
@@ -3707,12 +3707,12 @@ gostar	(V*)
 resolver	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -3721,9 +3721,9 @@ resolver	(V*)
 -	*
 -	*
 -	*
-pegar	(V*)
--	(A1*
--	*)
+pegar	*
+-	(V*)
+-	(A1*)
 -	*
 -	*
 -	*
@@ -3749,9 +3749,9 @@ fazer	(V*)
 
 -	(A1*
 -	*
--	*
-encaixar	*
--	*
+-	*)
+encaixar	(V*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3766,17 +3766,17 @@ ter	(V*)
 -	*)
 -	*
 
--	(A0*
--	*)
 -	*
 -	*
 -	*
--	(A1*
--	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 denunciar	(V*)
--	(A2*
--	*
+-	(AM-TMP*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -3893,9 +3893,9 @@ oferecer	(V*)
 
 causar	(V*)
 -	(A1*
+-	*)
 -	*
--	*
--	*
+-	(A2*
 -	*
 -	*
 -	*
@@ -3952,8 +3952,8 @@ causar	(V*)
 tratar	(V*)
 -	(A1*
 -	*
--	*
--	*
+-	*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -3962,7 +3962,7 @@ tratar	(V*)
 -	*
 
 chegar	(V*)
--	(A1*
+-	(A1*)
 -	*
 -	*
 -	*
@@ -3974,7 +3974,7 @@ chegar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 
 -	*
@@ -3987,14 +3987,13 @@ chegar	(V*)
 -	*
 -	*
 sair	(V*)
--	(AM-MNR*
+-	(AM-TMP*
 -	*
 -	*
 -	*)
 -	*
 
--	(A2*
--	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -4004,6 +4003,7 @@ sair	(V*)
 -	*
 -	*
 -	*)
+-	(A0*)
 fazer	(V*)
 -	(A1*
 -	*
@@ -4130,21 +4130,21 @@ pôr	(V*)
 interpretar	(V*)
 -	(A1*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -4162,9 +4162,9 @@ interpretar	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	*
 fazer	(V*)
--	(A1*
+-	(A0*
 -	*
 -	*
 -	*
@@ -4179,25 +4179,7 @@ fazer	(V*)
 -	*)
 dirigir	(V*)
 -	(A1*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
--	*
-
--	(A0*)
--	(AM-NEG*)
-estar	(V*)
 -	(A2*
 -	*
 -	*
@@ -4210,40 +4192,58 @@ estar	(V*)
 -	*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+
+-	(A1*
+-	*)
+estar	(V*)
+-	(A2*
 -	*
 -	*
 -	*
 -	*)
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	(A0*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -4256,7 +4256,7 @@ estar	(V*)
 -	*)
 -	(AM-NEG*)
 resistir	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4347,10 +4347,10 @@ pagar	(V*)
 -	*
 -	*
 -	*
--	(A0*
 -	*
 -	*
--	*)
+-	*
+-	*
 filmar	(V*)
 -	*
 -	*
@@ -4378,8 +4378,8 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -4406,19 +4406,19 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
--	(AM-PNC*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
 -	*
 confirmar	(V*)
--	*
+-	(C-V*)
 -	(A1*
 -	*
 -	*
@@ -4429,16 +4429,16 @@ confirmar	(V*)
 
 ver	(V*)
 -	*
--	(A3*
+-	(AM-CAU*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
+-	*)
 -	*
--	*
--	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -4464,15 +4464,15 @@ ver	(V*)
 -	*)
 jogar	(V*)
 -	(A1*)
--	(AM-LOC*
--	*
+-	(AM-TMP*)
+-	(A0*
 -	*
 -	*
 -	*)
 -	*
 
 vencer	(V*)
--	(A1*
+-	(A4*
 -	*
 -	*
 -	*)
@@ -4481,7 +4481,7 @@ vencer	(V*)
 -	(AM-ADV*)
 bastar	(V*)
 -	*
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4510,7 +4510,7 @@ bastar	(V*)
 -	*
 -	(A0*
 -	*)
--	(AM-TMP*)
+-	(AM-ADV*)
 -	*
 chegar	(V*)
 -	(A2*
@@ -4521,10 +4521,10 @@ chegar	(V*)
 -	(A0*
 -	*)
 ancorar	(V*)
+-	(AM-LOC*
+-	*
+-	*)
 -	(A1*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -4537,8 +4537,6 @@ ancorar	(V*)
 -	*)
 -	*
 
--	(A1*
--	*)
 -	*
 -	*
 -	*
@@ -4546,10 +4544,12 @@ ancorar	(V*)
 -	*
 -	*
 -	*
--	(A0*
--	*)
+-	*
+-	*
+-	(A0*)
+-	*
 tornar	(V*)
--	(A1*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4576,7 +4576,7 @@ querer	(V*)
 -	*
 -	(A1*
 -	*)
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*
 -	*)
@@ -4588,7 +4588,7 @@ querer	(V*)
 -	*
 -	*
 ir	(V*)
--	(A2*
+-	(A0*
 -	*
 -	*
 -	*
@@ -4598,7 +4598,7 @@ ir	(V*)
 -	*)
 -	*
 
--	(AM-CAU*
+-	(AM-ADV*
 -	*
 -	*
 -	*
@@ -4608,12 +4608,12 @@ dispensar	(V*)
 -	*
 -	*
 -	*
--	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -4668,10 +4668,10 @@ saber	(V*)
 -	*
 -	*
 -	*
--	(A0*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 defender	(V*)
@@ -4682,7 +4682,7 @@ defender	(V*)
 
 -	*
 chegar	(V*)
--	(AM-MNR*
+-	(AM-CAU*
 -	*
 -	*
 -	*
@@ -4701,7 +4701,7 @@ discordar	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -4721,7 +4721,7 @@ jogar	(V*)
 -	(A1*
 -	*)
 estar	(V*)
--	(A2*
+-	(AM-TMP*
 -	*
 -	*
 -	*)
@@ -4768,7 +4768,6 @@ existir	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
@@ -4777,12 +4776,13 @@ existir	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-ADV*)
+-	*
+-	*
+-	*
 engatinhar	(V*)
 -	(AM-TMP*
--	*)
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4791,7 +4791,6 @@ engatinhar	(V*)
 -	*)
 -	*
 
--	(A0*
 -	*
 -	*
 -	*
@@ -4800,13 +4799,14 @@ engatinhar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-ADV*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	(AM-ADV*)
 aparecer	(V*)
--	(A1*
--	*
+-	(A1*)
+-	(A2*
 -	*
 -	*
 -	*
@@ -4818,9 +4818,9 @@ aparecer	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
 -	(A0*
+-	*
 -	*)
 querer	(V*)
 -	(A1*
@@ -4830,33 +4830,33 @@ querer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A0*)
@@ -4878,11 +4878,11 @@ dizer	(V*)
 -	(A0*)
 -	*
 -	*
--	(A1*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 formar	(V*)
 -	*
@@ -4893,20 +4893,20 @@ formar	(V*)
 
 -	*
 -	(A0*)
-ter	(V*)
--	(A2*
+ter	(AM-REC*)
+-	(V*)
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 
 -	*
 -	(A0*)
 ter	(V*)
--	(AM-EXT*)
+-	(AM-NEG*)
 -	*
 -	*
 -	*
@@ -4933,15 +4933,15 @@ pensar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -5024,7 +5024,7 @@ enfrentar	(V*)
 -	*)
 -	*
 
--	(A0*)
+-	(AM-DIS*)
 -	*
 -	(A0*
 -	*)
@@ -5093,7 +5093,7 @@ estimular	(V*)
 -	*
 -	*
 -	*
--	(A0*)
+-	*
 -	*
 -	*
 -	*
@@ -5104,7 +5104,7 @@ estimular	(V*)
 -	*
 -	*
 promover	(V*)
--	(C-V*)
+-	*
 -	(A1*
 -	*
 -	*)
