propbankbr: version 1.0 updates

--- a/lr5.00e-03_hs8x8x8_ctx-p1/valid-eval.props
+++ b/lr5.00e-03_hs8x8x8_ctx-p1/valid-eval.props
@@ -64,7 +64,7 @@ apontar	(V*)
 -	*
 -	*)
 sonhar	(V*)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -135,9 +135,9 @@ passar	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
--	*
--	*
+-	*)
 realizar	(V*)
 -	*
 -	*
@@ -152,18 +152,18 @@ realizar	(V*)
 
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 trazer	(V*)
--	(A1*
--	*
+-	(A1*)
+-	(AM-PNC*
 -	*
 -	*
 -	*
@@ -192,12 +192,12 @@ vir	(V*)
 -	*
 -	*
 -	*
--	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	(AM-TMP*)
@@ -227,10 +227,10 @@ suspeitar	(V*)
 -	*
 -	*
 -	(A1*
+-	*)
 -	*
--	*
-morrer	*)
--	(V*)
+morrer	(V*)
+-	(C-V*)
 -	*
 
 -	(A1*)
@@ -268,8 +268,8 @@ ficar	(V*)
 subir	(V*)
 -	(A1*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*)
 -	*
 
@@ -346,7 +346,7 @@ retirar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A0*)
 -	*
 corrigir	(V*)
 -	(A1*)
@@ -376,19 +376,19 @@ garantir	(V*)
 produzir	(V*)
 -	(A0*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -404,11 +404,11 @@ ter	(V*)
 -	*
 -	*
 
+-	*
+-	*
+-	*
+-	*
 -	(A1*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*)
@@ -424,13 +424,13 @@ explicar	(V*)
 -	*
 -	*
 -	*
-fixar	(V*)
--	(A2*
+fixar	*
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -490,7 +490,7 @@ ter	(V*)
 -	*
 
 -	*
--	(AM-TMP*
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -572,8 +572,8 @@ demorar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 
 -	*
 -	*
@@ -604,7 +604,7 @@ ganhar	(V*)
 -	(A1*)
 -	*
 
--	*
+-	(A0*)
 -	*
 ter	(V*)
 -	(A1*
@@ -653,11 +653,11 @@ dizer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -674,7 +674,7 @@ dizer	(V*)
 
 -	*
 -	(A0*)
--	*
+-	(AM-REC*)
 ter	(V*)
 -	(A1*
 -	*
@@ -686,18 +686,18 @@ ter	(V*)
 atribuir	(V*)
 -	(A1*
 -	*)
--	(A2*
+-	(AM-MNR*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	(AM-TMP*
 -	*
--	*
--	*
--	*
--	*)
 -	*
 
 -	*
@@ -785,7 +785,7 @@ precisar	(V*)
 -	*
 -	(A0*)
 ir	(V*)
--	(A1*
+-	(A4*
 -	*)
 
 -	(A0*
@@ -797,8 +797,8 @@ ir	(V*)
 -	*
 -	*)
 fazer	(V*)
--	(C-V*)
--	(A1*)
+-	(A1*
+-	*)
 -	(AM-TMP*
 -	*
 -	*
@@ -830,15 +830,15 @@ fazer	(V*)
 atacar	(V*)
 -	(A1*)
 -	(AM-TMP*)
--	(V*)
--	(A2*
 -	*
 -	*
--	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	(AM-TMP*
--	*
 -	*
 -	*
 -	*
@@ -861,15 +861,14 @@ atacar	(V*)
 -	*
 -	*
 -	(A0*)
--	*
--	(AM-NEG*)
+-	(AM-NEG*
+-	*)
 ter	(V*)
 -	(A1*
 -	*
 -	*)
 -	*
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
@@ -885,7 +884,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -974,7 +974,7 @@ prever	(V*)
 -	*)
 -	*
 
--	(AM-TMP*
+-	(AM-DIS*
 -	*)
 -	*
 -	(A0*
@@ -1054,8 +1054,8 @@ levantar	(V*)
 -	*
 -	*
 -	*
--	*
 -	*)
+-	*
 -	*
 confirmar	(V*)
 -	(AM-LOC*
@@ -1096,9 +1096,9 @@ acusar	(V*)
 -	*)
 -	*
 comparecer	(V*)
--	(AM-TMP*
--	*)
--	(AM-LOC*
+-	(AM-TMP*)
+-	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -1125,15 +1125,15 @@ condenar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	(A1*)
@@ -1143,16 +1143,16 @@ punir	(V*)
 -	*
 -	*
 -	*
--	(AM-CAU*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
--	(A1*
+-	(A1*)
 -	*
--	*)
+-	*
 -	*
 -	*
 -	*
@@ -1198,7 +1198,7 @@ anunciar	(V*)
 -	(A1*
 -	*)
 ficar	(V*)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -1212,8 +1212,8 @@ ficar	(V*)
 -	*)
 -	*
 
--	(A0*)
--	*
+-	(A0*
+-	*)
 começar	(V*)
 -	(AM-TMP*
 -	*
@@ -1221,9 +1221,9 @@ começar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-LOC*
 -	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -1243,10 +1243,10 @@ dar	(V*)
 -	*
 -	*
 -	*
--	*
-atender	(V*)
 -	(A0*)
--	*
+atender	(V*)
+-	(A1*
+-	*)
 
 -	(A1*
 -	*
@@ -1260,12 +1260,12 @@ atender	(V*)
 -	*
 -	*
 dizer	(V*)
--	(A0*
+-	(A0*)
 -	*
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 
 -	(A0*
@@ -1293,20 +1293,20 @@ faltar	(V*)
 -	*
 -	*
 viver	(V*)
--	(C-V*)
 -	(A1*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*)
 -	*
--	*
--	*
--	*
--	*
--	*
--	(AM-LOC*
+-	(AM-TMP*
 -	*
 -	*
 -	*
@@ -1317,8 +1317,7 @@ viver	(V*)
 -	*)
 -	*
 
--	(AM-CAU*
--	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -1338,6 +1337,7 @@ viver	(V*)
 -	*
 -	*
 -	*)
+-	(AM-DIS*)
 -	*
 dizer	(V*)
 -	*
@@ -1390,7 +1390,7 @@ faltar	(V*)
 -	*
 
 -	(A0*)
--	(AM-NEG*)
+-	(AM-ADV*)
 ter	(V*)
 -	(A1*
 -	*
@@ -1400,13 +1400,13 @@ ter	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 
 -	*
@@ -1472,7 +1472,7 @@ afirmar	(V*)
 -	*
 
 saber	(V*)
--	(A1*)
+-	(A0*)
 -	*
 -	*
 
@@ -1540,6 +1540,7 @@ ganhar	(V*)
 -	(AM-TMP*
 -	*)
 -	*
+-	(AM-LOC*
 -	*
 -	*
 -	*
@@ -1549,8 +1550,7 @@ ganhar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
 -	(A0*)
 disputar	(V*)
 -	(A1*
@@ -1603,7 +1603,7 @@ multar	(V*)
 -	*
 -	*)
 autuar	(V*)
--	(AM-LOC*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -1670,8 +1670,8 @@ chegar	(V*)
 -	*
 aplicar	(V*)
 -	(A1*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -1685,8 +1685,8 @@ aplicar	(V*)
 
 -	(A1*)
 produzir	(V*)
--	(A2*)
--	(AM-LOC*
+-	(A2*
+-	*
 -	*
 -	*)
 
@@ -1700,24 +1700,24 @@ instalar	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*
 -	*
 -	*
@@ -1760,8 +1760,8 @@ fazer	(V*)
 -	(A0*)
 aconselhar	(V*)
 -	(A1*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -1775,10 +1775,10 @@ aconselhar	(V*)
 
 -	(A0*
 -	*
--	*)
--	(AM-TMP*
 -	*
-conversar	*)
+-	*)
+-	(V*)
+conversar	(AM-TMP*)
 -	(A1*
 -	*
 -	*)
@@ -1816,15 +1816,15 @@ reverter	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A0*
+-	*)
 perder	(V*)
--	*
--	*
+-	(C-V*)
+-	(A1*)
 
+-	(A1*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -1833,13 +1833,13 @@ perder	(V*)
 fazer	(V*)
 -	(A1*
 -	*)
--	(A2*
--	*
--	*
--	*
--	*
+-	(AM-LOC*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -1880,9 +1880,9 @@ cumprir	(V*)
 -	*
 -	*
 
--	(AM-DIS*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	(A0*)
 preferir	(V*)
@@ -1891,11 +1891,11 @@ preferir	(V*)
 -	*)
 -	*
 
--	(AM-DIS*
+-	(A1*
 -	*
 -	*)
 -	*
--	*
+-	(A0*)
 -	*
 manter	(V*)
 -	(A1*
@@ -1921,7 +1921,7 @@ ter	(V*)
 -	*
 -	*
 dizer	(V*)
--	(AM-TMP*
+-	(A1*
 -	*)
 -	*
 -	*
@@ -1963,7 +1963,7 @@ querer	(V*)
 -	*
 -	*
 simpatizar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2109,8 +2109,8 @@ ocorrer	(V*)
 -	*
 -	(A1*
 -	*
--	*)
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2165,27 +2165,7 @@ chegar	(V*)
 -	*
 -	*)
 dar	(V*)
--	(A1*)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -2193,6 +2173,26 @@ dar	(V*)
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -2256,12 +2256,12 @@ expulsar	(V*)
 -	*
 -	*
 -	*
--	*
+-	(A1*)
 adotar	(V*)
 -	(A1*
 -	*
 -	*)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -2282,7 +2282,7 @@ dar	(V*)
 -	*
 forçar	(V*)
 -	*
--	(AM-TMP*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -2315,7 +2315,7 @@ reduzir	(V*)
 -	*
 -	*
 dizer	(V*)
--	(A0*
+-	(A1*
 -	*
 -	*)
 -	*
@@ -2353,15 +2353,15 @@ estar	(V*)
 -	*
 -	*
 
+-	(AM-DIS*)
+-	*
+-	(A0*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
+-	*)
 -	*
 -	*
 -	*
@@ -2431,7 +2431,7 @@ estar	(V*)
 -	*
 -	*)
 -	*
--	(AM-TMP*
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -2485,8 +2485,8 @@ firmar	(V*)
 -	(A1*
 -	*
 -	*
--	*)
--	(AM-TMP*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2521,7 +2521,7 @@ firmar	(V*)
 -	*
 -	(A1*)
 valer	(V*)
--	(AM-CAU*
+-	(A4*
 -	*
 -	*
 -	*
@@ -2573,8 +2573,8 @@ elevar	(V*)
 -	*
 -	*
 -	*
--	*)
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2605,9 +2605,9 @@ divulgar	(V*)
 -	(AM-TMP*
 -	*
 -	*
--	*)
 -	*
--	(AM-ADV*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2698,15 +2698,15 @@ conseguir	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-TMP*
 -	*
 -	*)
 -	*
 
 -	*
 estar	(V*)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -2747,7 +2747,7 @@ estar	(V*)
 -	*)
 -	*
 escolher	(V*)
--	(AM-MNR*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -2759,7 +2759,7 @@ escolher	(V*)
 -	*
 -	*
 -	*
--	*
+-	*)
 -	*
 
 -	*
@@ -2778,11 +2778,11 @@ escolher	(V*)
 -	*
 -	*
 estar	(V*)
--	(AM-LOC*
+-	(A2*
 -	*
+-	*)
 -	*
--	*
--	*
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -2812,7 +2812,7 @@ estar	(V*)
 -	*
 -	*
 -	(AM-TMP*)
--	(A1*
+-	(A0*
 -	*)
 treinar	(V*)
 -	(AM-TMP*
@@ -2824,7 +2824,7 @@ treinar	(V*)
 -	*
 -	*)
 subir	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*)
@@ -2894,10 +2894,10 @@ trabalhar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
 -	(A0*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -2952,7 +2952,7 @@ vir	(V*)
 -	*
 -	*
 -	*
--	(AM-TMP*
+-	(AM-LOC*
 -	*
 -	*
 -	*)
@@ -2968,7 +2968,7 @@ compensar	(V*)
 -	*)
 -	*
 
--	(AM-NEG*)
+-	*
 -	*
 haver	(V*)
 -	(A0*
@@ -3004,9 +3004,9 @@ haver	(V*)
 -	*
 -	*
 substituir	(V*)
--	(A0*
+-	(A0*)
 -	*
--	*
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -3034,7 +3034,7 @@ substituir	(V*)
 -	*
 -	*
 ter	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3069,7 +3069,7 @@ jogar	(V*)
 -	*
 -	*
 
--	(AM-TMP*
+-	(AM-DIS*
 -	*)
 -	*
 -	(A0*)
@@ -3105,8 +3105,8 @@ ampliar	(V*)
 -	(A1*
 -	*
 -	*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3194,9 +3194,9 @@ inspirar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
 -	*)
+-	*
+-	*
 -	*
 
 -	(A0*
@@ -3220,11 +3220,11 @@ ver	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -3268,7 +3268,9 @@ dizer	(V*)
 -	(A0*)
 afirmar	(V*)
 -	*
--	(AM-DIS*)
+-	(AM-TMP*)
+-	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3279,22 +3281,20 @@ afirmar	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
 -	*
 
--	(A0*)
+-	(A1*)
 -	*
 achar	(V*)
--	(C-V*)
+-	(A2*)
 -	(AM-LOC*
 -	*
 -	*)
 
 -	(A0*)
 encontrar	(V*)
--	(A0*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3323,8 +3323,8 @@ encontrar	(V*)
 dizer	(V*)
 -	(A1*
 -	*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3393,7 +3393,7 @@ receber	(V*)
 -	*)
 -	*
 receber	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3423,16 +3423,16 @@ morrer	(V*)
 -	*)
 -	*
 
--	(A0*
+-	(A1*
 -	*)
 -	*
 realizar	(V*)
 -	(A0*
 -	*
 -	*
--	*)
 -	*
--	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3443,9 +3443,9 @@ realizar	(V*)
 -	*)
 -	*
 
--	*
-bater	*
--	(V*)
+-	(A0*)
+bater	(V*)
+-	(A1*)
 -	*
 -	*
 -	*
@@ -3488,7 +3488,7 @@ ficar	(V*)
 -	*
 -	(A0*)
 contar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3516,7 +3516,7 @@ ficar	(V*)
 -	*
 -	*
 -	*)
--	(AM-TMP*
+-	(AM-PRD*
 -	*
 -	*
 -	*
@@ -3598,15 +3598,15 @@ marcar	(V*)
 -	*)
 -	*
 
--	(A1*
--	*
--	*
--	*
--	*)
 -	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 participar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -3621,15 +3621,15 @@ participar	(V*)
 -	*)
 -	*
 
--	(AM-DIS*
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 -	(A1*)
 estar	(V*)
--	(A2*
+-	(A2*)
 -	*
 -	*
 -	*
@@ -3638,7 +3638,7 @@ estar	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
 -	*
 
 -	(A1*
@@ -3721,9 +3721,9 @@ resolver	(V*)
 -	*
 -	*
 -	*
-pegar	*
--	(V*)
--	(A1*)
+pegar	(V*)
+-	(A1*
+-	*)
 -	*
 -	*
 -	*
@@ -3748,9 +3748,9 @@ fazer	(V*)
 -	*
 
 -	(A1*
--	*
 -	*)
-encaixar	(V*)
+-	(V*)
+encaixar	(C-V*)
 -	(A2*
 -	*
 -	*
@@ -3771,8 +3771,8 @@ ter	(V*)
 -	*
 -	*
 -	*
--	*
--	*
+-	(A1*
+-	*)
 -	*
 denunciar	(V*)
 -	(AM-TMP*)
@@ -3830,14 +3830,14 @@ depender	(V*)
 -	*
 
 estar	(V*)
--	(A2*
+-	(AM-LOC*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*
--	*
+-	*)
+-	(AM-MNR*
 -	*
 -	*
 -	*
@@ -3893,9 +3893,9 @@ oferecer	(V*)
 
 causar	(V*)
 -	(A1*
--	*)
 -	*
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3952,8 +3952,8 @@ causar	(V*)
 tratar	(V*)
 -	(A1*
 -	*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -3987,13 +3987,14 @@ chegar	(V*)
 -	*
 -	*
 sair	(V*)
--	(AM-TMP*
+-	(AM-MNR*
 -	*
 -	*
 -	*)
 -	*
 
--	(AM-LOC*
+-	(A2*
+-	*
 -	*
 -	*
 -	*
@@ -4003,7 +4004,6 @@ sair	(V*)
 -	*
 -	*
 -	*)
--	(A0*)
 fazer	(V*)
 -	(A1*
 -	*
@@ -4016,15 +4016,15 @@ fazer	(V*)
 -	*
 -	*
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -4164,7 +4164,7 @@ interpretar	(V*)
 -	*
 -	*
 fazer	(V*)
--	(A0*
+-	(A2*
 -	*
 -	*
 -	*
@@ -4179,8 +4179,8 @@ fazer	(V*)
 -	*)
 dirigir	(V*)
 -	(A1*
--	*)
--	(A2*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4237,13 +4237,13 @@ estar	(V*)
 -	*
 -	*
 
--	*
--	*
--	*
--	*
--	*
--	*
 -	(A0*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4256,27 +4256,27 @@ estar	(V*)
 -	*)
 -	(AM-NEG*)
 resistir	(V*)
--	(A2*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*)
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*
 
 -	*
@@ -4363,8 +4363,8 @@ filmar	(V*)
 -	*
 -	*
 
--	(A1*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4372,18 +4372,18 @@ filmar	(V*)
 -	*
 -	*
 fazer	(V*)
--	(A2*
+-	(A3*
+-	*
+-	*
+-	*
+-	*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*)
--	(AM-TMP*
 -	*
--	*
--	*
--	*)
 -	*
 -	*
 -	*
@@ -4406,19 +4406,19 @@ fazer	(V*)
 -	*
 -	*
 -	*
+-	*
+-	*)
+-	(AM-PNC*
+-	*
+-	*
+-	*
+-	*
+-	*
+-	*
 -	*)
 -	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
--	*
 confirmar	(V*)
--	(C-V*)
+-	*
 -	(A1*
 -	*
 -	*
@@ -4429,16 +4429,16 @@ confirmar	(V*)
 
 ver	(V*)
 -	*
--	(AM-CAU*
+-	(AM-MNR*
 -	*
 -	*
 -	*
 -	*
 -	*
 -	*
--	*)
 -	*
--	(A0*
+-	*
+-	*
 -	*
 -	*
 -	*
@@ -4463,16 +4463,16 @@ ver	(V*)
 -	(A0*
 -	*)
 jogar	(V*)
--	(A1*)
--	(AM-TMP*)
--	(A0*
+-	(A1*
+-	*
+-	*
 -	*
 -	*
 -	*)
 -	*
 
 vencer	(V*)
--	(A4*
+-	(AM-PNC*
 -	*
 -	*
 -	*)
@@ -4481,7 +4481,7 @@ vencer	(V*)
 -	(AM-ADV*)
 bastar	(V*)
 -	*
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4513,7 +4513,7 @@ bastar	(V*)
 -	(AM-ADV*)
 -	*
 chegar	(V*)
--	(A2*
+-	(AM-MNR*
 -	*
 -	*)
 -	*
@@ -4549,7 +4549,7 @@ ancorar	(V*)
 -	(A0*)
 -	*
 tornar	(V*)
--	(A2*
+-	(A1*
 -	*
 -	*
 -	*
@@ -4574,9 +4574,9 @@ haver	(V*)
 querer	(V*)
 -	*
 -	*
--	(A1*
--	*)
--	(AM-TMP*
+-	(AM-LOC*
+-	*
+-	*
 -	*
 -	*
 -	*)
@@ -4588,32 +4588,32 @@ querer	(V*)
 -	*
 -	*
 ir	(V*)
--	(A0*
--	*
--	*
+-	(A3*
 -	*
 -	*
 -	*
 -	*
 -	*)
 -	*
+-	*
+-	*
 
--	(AM-ADV*
+-	(AM-DIS*
+-	*)
 -	*
--	*
--	*
+-	(A0*
 -	*
 -	*)
 dispensar	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
 -	*
 -	*
--	(AM-TMP*
 -	*
 -	*
 -	*
@@ -4668,10 +4668,10 @@ saber	(V*)
 -	*
 -	*
 -	*
+-	(A0*
 -	*
 -	*
--	*
--	*
+-	*)
 -	*
 -	*
 defender	(V*)
@@ -4701,10 +4701,7 @@ discordar	(V*)
 -	*)
 -	*
 
--	(AM-MNR*
--	*
--	*
--	*
+-	(A0*
 -	*
 -	*
 -	*
@@ -4712,6 +4709,9 @@ discordar	(V*)
 -	*
 -	*
 -	*)
+-	*
+-	(AM-TMP*)
+-	*
 jogar	(V*)
 -	(A1*
 -	*
@@ -4749,7 +4749,6 @@ apreciar	(V*)
 -	*)
 -	*
 existir	(V*)
--	(A2*
 -	*
 -	*
 -	*
@@ -4765,7 +4764,8 @@ existir	(V*)
 -	*
 -	*
 -	*
--	*)
+-	*
+-	*
 -	*
 
 -	*
@@ -4773,12 +4773,12 @@ existir	(V*)
 -	*
 -	*
 -	*
+-	(A1*
 -	*
 -	*
 -	*
--	*
--	*
--	*
+-	*)
+-	(AM-ADV*)
 engatinhar	(V*)
 -	(AM-TMP*
 -	*
@@ -4805,8 +4805,8 @@ engatinhar	(V*)
 -	*
 -	(AM-ADV*)
 aparecer	(V*)
--	(A1*)
--	(A2*
+-	(A1*
+-	*
 -	*
 -	*
 -	*
@@ -4818,9 +4818,9 @@ aparecer	(V*)
 -	*
 -	*
 -	*
+-	*
 -	*)
 -	(A0*
--	*
 -	*)
 querer	(V*)
 -	(A1*
@@ -5024,9 +5024,9 @@ enfrentar	(V*)
 -	*)
 -	*
 
--	(AM-DIS*)
--	*
 -	(A0*
+-	*
+-	*
 -	*)
 achar	(V*)
 -	(A1*
@@ -5073,9 +5073,9 @@ estimular	(V*)
 -	*
 -	(A0*)
 estimular	(V*)
--	(A2*
--	*
--	*
+-	(AM-LOC*
+-	*)
+-	(A1*
 -	*
 -	*
 -	*
@@ -5104,7 +5104,7 @@ estimular	(V*)
 -	*
 -	*
 promover	(V*)
--	*
+-	(C-V*)
 -	(A1*
 -	*
 -	*)
